feat : 컬러 white95, gray4, gray5 추가

--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -2,9 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white95">#F2FFFFFF</color>
     <color name="gray1">#FFFFFFFF</color>
     <color name="gray2">#FFEEEEEE</color>
     <color name="gray3">#505050</color>
+    <color name="gray4">#808080</color>
+    <color name="gray5">#9F9F9F</color>
     <color name="gray6">#333333</color>
 
     <color name="MainColor">#FFFA9A85</color>
