--- a/presentation/src/main/res/values-night-v21/colors.xml
+++ b/presentation/src/main/res/values-night-v21/colors.xml
@@ -2,9 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white95">#F2FFFFFF</color>
     <color name="gray1">#1E1E1E</color>
     <color name="gray2">#333333</color>
     <color name="gray3">#505050</color>
+    <color name="gray4">#808080</color>
+    <color name="gray5">#9F9F9F</color>
     <color name="gray6">#ECECEC</color>
 
     <color name="MainColor">#EFFF04</color>
