--- a/presentation/src/main/res/values-night-v21/colors.xml
+++ b/presentation/src/main/res/values-night-v21/colors.xml
@@ -10,8 +10,8 @@
     <color name="gray5">#9F9F9F</color>
     <color name="gray6">#ECECEC</color>
 
-    <color name="MainColor">#EFFF04</color>
-    <color name="SubColor">#0884FE</color>
+    <color name="MainColor">#E6FA00</color>
+    <color name="SubColor">#3098FF</color>
     <color name="Surface">@color/gray3</color>
     <color name="onSurface">@color/white</color>
     <color name="transparent">#00000000</color>
