--- a/presentation/src/main/res/drawable/ic_back_32.xml
+++ b/presentation/src/main/res/drawable/ic_back_32.xml
@@ -8,6 +8,6 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/MainColor"
+      android:strokeColor="@color/onSurface"
       android:strokeLineCap="round"/>
 </vector>
