--- a/presentation/src/main/res/values-night-v21/colors.xml
+++ b/presentation/src/main/res/values-night-v21/colors.xml
@@ -2,13 +2,16 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white95">#F2FFFFFF</color>
     <color name="gray1">#1E1E1E</color>
     <color name="gray2">#333333</color>
     <color name="gray3">#505050</color>
+    <color name="gray4">#808080</color>
+    <color name="gray5">#9F9F9F</color>
     <color name="gray6">#ECECEC</color>
 
-    <color name="MainColor">#EFFF04</color>
-    <color name="SubColor">#0884FE</color>
+    <color name="MainColor">#E6FA00</color>
+    <color name="SubColor">#3098FF</color>
     <color name="Surface">@color/gray3</color>
     <color name="onSurface">@color/white</color>
     <color name="transparent">#00000000</color>
