refactor : 디자인 수정에 다른 얼굴 검출 리스트 아이템 UI 변경

--- a/presentation/src/main/res/values-v21/themes.xml
+++ b/presentation/src/main/res/values-v21/themes.xml
@@ -33,4 +33,9 @@
         <item name="android:textSize">10sp</item>
         <item name="android:fontFamily">@font/pretendard_regular</item>
     </style>
+
+    <style name="ICEC.RoundedCorner_8" parent="">
+        <item name="cornerSize">8dp</item>
+    </style>
+
 </resources>
