--- a/presentation/src/main/res/layout/viewholder_detected_face.xml
+++ b/presentation/src/main/res/layout/viewholder_detected_face.xml
@@ -9,39 +9,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_face"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:background="@drawable/bg_detected_face_item_rounded"
             android:clipToOutline="true"
             android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/rv_test_image" />
-
-        <ImageView
-            android:id="@+id/iv_checking_background"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/bg_checking_face"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_face"
-            app:layout_constraintEnd_toEndOf="@+id/iv_face"
-            app:layout_constraintStart_toStartOf="@+id/iv_face"
-            app:layout_constraintTop_toTopOf="@+id/iv_face"
-            tools:visibility="visible" />
+            app:shapeAppearanceOverlay="@style/ICEC.RoundedCorner_8"
+            tools:src="@drawable/rv_test_image"
+            tools:strokeColor="@color/SubColor"
+            tools:strokeWidth="2dp" />
 
         <ImageView
             android:id="@+id/iv_check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_select_mark_32"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_face"
             app:layout_constraintEnd_toEndOf="@+id/iv_face"
-            app:layout_constraintStart_toStartOf="@+id/iv_face"
             app:layout_constraintTop_toTopOf="@+id/iv_face"
+            tools:src="@drawable/ic_select_mark_14"
             tools:visibility="visible" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
