디자인 수정에 따른 모자이크 1단계 UI/UX 수정 (#21)
* refactor : 폰트 pretendard, pretendard_semi_bold 제거

* feat : 컬러 white95, gray4, gray5 추가

* refactor : 사용하지 않는 drawable 파일 제거

* refactor : 컬러 MainColor, SubColor 변경

* refactor : 아이콘 `ic_check_32_32` → `ic_select_mark_32`로 변경

* feat : slider, slider tooltip, sldier tooltip text appearance 스타일 정의 및 적용

* refactor : slider dimens 재설정

* feat : slider 확장함수 생성

* refactor : `ic_back_32` 컬러 변경

* feat : Dp 확장 속성 추가

* refactor : 디자인 수정에 다른 얼굴 검출 리스트 아이템 UI 변경

* refactor : defalut theme 변경

* refactor : `SliderExtensions` 삭제 및 리뷰 반영

--- a/presentation/src/main/res/values-v21/themes.xml
+++ b/presentation/src/main/res/values-v21/themes.xml
@@ -14,4 +14,28 @@
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
+
+    <style name="ICEC.slider" parent="@style/Widget.MaterialComponents.Slider">
+        <item name="labelStyle">@style/ICEC.slider.Tooltip</item>
+        <item name="trackColorActive">@color/MainColor</item>
+        <item name="trackColorInactive">@color/gray3</item>
+        <item name="thumbColor">@color/white</item>
+        <item name="tickVisible">false</item>
+    </style>
+
+    <style name="ICEC.slider.Tooltip" parent="Widget.MaterialComponents.Tooltip">
+        <item name="backgroundTint">@android:color/transparent</item>
+        <item name="android:textAppearance">@style/ICEC.slider.Tooltip.TextAppearance</item>
+    </style>
+
+    <style name="ICEC.slider.Tooltip.TextAppearance" parent="TextAppearance.MaterialComponents.Tooltip">
+        <item name="android:textColor">@color/onSurface</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:fontFamily">@font/pretendard_regular</item>
+    </style>
+
+    <style name="ICEC.RoundedCorner_8" parent="">
+        <item name="cornerSize">8dp</item>
+    </style>
+
 </resources>
