--- a/presentation/src/main/res/layout/top_bar.xml
+++ b/presentation/src/main/res/layout/top_bar.xml
@@ -19,6 +19,18 @@
             app:layout_constraintTop_toTopOf="@+id/textview_title"
             tools:visibility="visible" />
 
+        <ImageView
+            android:id="@+id/bt_close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:src="@drawable/ic_close_32"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="gone" />
+
         <TextView
             android:id="@+id/textview_title"
             android:layout_width="wrap_content"
