--- a/presentation/src/main/res/values-night-v21/themes.xml
+++ b/presentation/src/main/res/values-night-v21/themes.xml
@@ -34,4 +34,20 @@
         <item name="cornerSize">8dp</item>
     </style>
 
+    <style name="ICEC.MaterialButton.TopBarButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:insetLeft">0dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetRight">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:paddingStart">15dp</item>
+        <item name="android:paddingEnd">15dp</item>
+        <item name="android:paddingTop">6dp</item>
+        <item name="android:paddingBottom">6dp</item>
+        <item name="cornerRadius">20dp</item>
+    </style>
+
+
 </resources>
