--- a/presentation/src/main/res/layout/fragment_detect_face.xml
+++ b/presentation/src/main/res/layout/fragment_detect_face.xml
@@ -13,8 +13,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_height="250dp">
+        android:layout_height="234dp">
 
         <TextView
             android:id="@+id/tv_detected_face_count"
