--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
             android:id="@+id/imageview_image"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:scaleType="fitCenter"
             app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
