--- a/presentation/src/main/res/values-v21/themes.xml
+++ b/presentation/src/main/res/values-v21/themes.xml
@@ -53,4 +53,26 @@
         <item name="cornerRadius">20dp</item>
     </style>
 
+    <style name="ICEC.MaterialButton.MosaicEditButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/gray1</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/notosans_semibold</item>
+        <item name="android:insetLeft">0dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetRight">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:paddingTop">12dp</item>
+        <item name="android:paddingBottom">12dp</item>
+        <item name="android:stateListAnimator">@null</item>
+        <item name="android:elevation">32dp</item>
+        <item name="cornerRadius">8dp</item>
+        <item name="backgroundTint">@color/white</item>
+        <item name="iconTint">@color/gray1</item>
+        <item name="iconPadding">10dp</item>
+    </style>
+
 </resources>
