프로젝트 UI 리팩토링 (#23)
* feat : `top_bar` 닫기 버튼 추가

* feat : `top_bar` 머터리얼 버튼 스타일 추가 및 저장 버튼 추가

* refactor : `top_bar` 뷰 id 컨벤션에 맞게끔 수정 및 메인 액티비티 수정

* refactor : 디자인 변경에 따른 각각의 프래그먼트 높이 고정값으로 변경 및 tools 속성 선언

* feat : 액티비티 이미지뷰 scaleType `fitCenter`로 지정

* refactor : string 리소스 수정에 따른 `fragment_mosaic_face` 수정

* refactor : 메인액티비티 뷰 id 컨벤션에 맞게끔 수정

* refactor : 모자이크 편집 분기 화면 뷰 id 컨벤션에 맞게끔 수정

* refactor : color 리소스 재설정

* refactor : 모자이크 / 편집 버튼 스타일 생성 및 적용

* feat : `top_bar` 카메라 액티비티에 사용되는 아이콘 및 버튼 추가

--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -9,32 +10,34 @@
         <include
             android:id="@+id/top_bar"
             layout="@layout/top_bar"
-            app:layout_constraintBottom_toTopOf="@+id/imageview_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageview_image"
+            android:id="@+id/iv_image"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:scaleType="fitCenter"
             app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/top_bar"
-             />
+            tools:src="@drawable/rv_test_image" />
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragmentContainerView"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="wrap_content"
             app:defaultNavHost="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageview_image"
-            app:navGraph="@navigation/nav_graph" />
+            app:layout_constraintTop_toBottomOf="@+id/iv_image"
+            app:navGraph="@navigation/nav_graph"
+            tools:layout="@layout/fragment_select_mosaic_edit"
+            tools:layout_height="114dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
