--- a/presentation/src/main/res/layout/fragment_mosaic_face.xml
+++ b/presentation/src/main/res/layout/fragment_mosaic_face.xml
@@ -6,8 +6,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_height="250dp">
+        android:layout_height="234dp">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_mosaic_figure"
@@ -44,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:fontFamily="@font/notosans_semibold"
-            android:text="@string/detect_face"
+            android:text="@string/detect_face_text"
             app:layout_constraintBottom_toTopOf="@id/slider_mosaic_figure"
             app:layout_constraintEnd_toStartOf="@id/iv_refresh"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
