--- a/presentation/src/main/res/values-v21/themes.xml
+++ b/presentation/src/main/res/values-v21/themes.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- ICEC.ActivityTheme -->
     <style name="ICECTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:windowBackground">@color/WindowBackGroundColor</item>
         <item name="android:statusBarColor">@color/StatusBarColor</item>
@@ -15,6 +17,7 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
+    <!-- ICEC.MaterialSlider -->
     <style name="ICEC.slider" parent="@style/Widget.MaterialComponents.Slider">
         <item name="labelStyle">@style/ICEC.slider.Tooltip</item>
         <item name="trackColorActive">@color/MainColor</item>
@@ -34,8 +37,62 @@
         <item name="android:fontFamily">@font/pretendard_regular</item>
     </style>
 
+    <!-- ICEC.CommonStyle -->
     <style name="ICEC.RoundedCorner_8" parent="">
         <item name="cornerSize">8dp</item>
+    </style>
+
+    <!-- ICEC.MaterialButton -->
+    <style name="ICEC.MaterialButton.TopBarButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:insetLeft">0dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetRight">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:paddingStart">15dp</item>
+        <item name="android:paddingEnd">15dp</item>
+        <item name="android:paddingTop">6dp</item>
+        <item name="android:paddingBottom">6dp</item>
+        <item name="cornerRadius">20dp</item>
+    </style>
+
+    <style name="ICEC.MaterialButton.TopBarButton.Use" parent="Widget.MaterialComponents.Button">
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:insetLeft">0dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetRight">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="cornerRadius">20dp</item>
+    </style>
+
+    <style name="ICEC.MaterialButton.MosaicEditButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/gray1</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/notosans_semibold</item>
+        <item name="android:insetLeft">0dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetRight">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:paddingTop">12dp</item>
+        <item name="android:paddingBottom">12dp</item>
+        <item name="android:stateListAnimator">@null</item>
+        <item name="android:elevation">32dp</item>
+        <item name="cornerRadius">8dp</item>
+        <item name="backgroundTint">@color/white</item>
+        <item name="iconTint">@color/gray1</item>
+        <item name="iconPadding">10dp</item>
     </style>
 
 </resources>
