--- a/presentation/src/main/res/layout/fragment_camera.xml
+++ b/presentation/src/main/res/layout/fragment_camera.xml
@@ -56,7 +56,7 @@
             android:layout_width="65dp"
             android:layout_height="65dp"
             android:layout_marginBottom="23dp"
-            android:background="@drawable/shape_circle_capture_button"
+            android:background="@drawable/ic_capture_65"
             android:stateListAnimator="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
